--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,8 +7,5 @@
   "exclude": [
     "dist"
   ],
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "react"
-  }
+  "compilerOptions": {}
 }
